bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:1: error: type mismatch;
 found   : Unit
 required: Boolean
def icyHot(temp1:Int, temp2: Int): Boolean = {if((temp1<0)&&(temp2>100)) {return(true)}; if((temp1>100)&&(temp2<0)) {return(true)}
                                                                                         ^